# QQ

./: CMakeLists.txt  README.md
config/: server_config.json
database/: init.sql  schema.sql
scripts/: start_server.sh
src/: main.cpp
src/client/: main.cpp
src/core/: AvatarUploader.cpp  AvatarUploader.h  CaptchaGenerator.cpp  CaptchaGenerator.h  EmailVerifier.cpp  EmailVerifier.h  Encryption.cpp  Encryption.h  Message.cpp  Message.h  NetworkManager.cpp  NetworkManager.h  User.cpp  User.h
src/server/: Config.cpp  Config.h  DatabaseManager.cpp  DatabaseManager.h  Encryption.cpp  Encryption.h  FriendManager.cpp  FriendManager.h  Logger.cpp  Logger.h  MessageManager.cpp  MessageManager.h  MessageQueue.cpp  MessageQueue.h  Server.cpp  Server.h  Session.cpp  Session.h  User.h  UserManager.cpp  UserManager.h  main.cpp
src/ui/: ChatWindow.cpp  ChatWindow.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  RegisterWindow.cpp  RegisterWindow.h
